[package]
name = "cave-fmt"
version = "0.1.1"
edition = "2021"
description = "Parse various cave /speleo related data formats"
homepage = "https://github.com/mdornseif/cave-fmt"
repository = "https://github.com/mdornseif/cave-fmt"
license = "MIT OR Apache-2.0"
keywords = ["speleo", "cave"]

[dependencies]
pest = "2.0"
pest_derive = "2.0"
vek = "0.15.8"
